Tue, 28 Nov 2006 21:04:45 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Added patch from Seth Remington (sremington 
          at saberlogic dot com) to fix about dialog close button

Sun, 26 Nov 2006 18:21:23 +0100 <thp@perli.net>
        * TODO: Updated TODO list

Wed, 22 Nov 2006 17:02:23 +0100 <thp@perli.net>
        * src/gpodder/libipodsync.py: Add support for pymad, because
          it gives more correct track length of MP3 files for me; 
          if pymad is not installed, gPodder will fallback to eyeD3;
          if you only installed eyeD3 for gPodder, you can remove it 
          now and install pymad instead
        * README: Note pymad dependency (and now-optional eyeD3)
        * doc/dev/ipod-sync.txt: State that pymad is now preferred

Wed, 22 Nov 2006 16:13:33 +0100 <thp@perli.net>
        * src/gpodder/libpodcasts.py: Small bugfix for description in 
          podcast item (80 instead of 20 chars is what we want ;)

Mon, 20 Nov 2006 13:33:00 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Fixed a stupid bug that prevented you 
          from changing a channel's url in the channel editor (didn't 
          anyone notice this bug before? ;)

Mon, 20 Nov 2006 12:46:54 +0100 <thp@perli.net>
        * src/gpodder/libpodcasts.py: Added one_line_description() to 
          podcastItem; modified getItemsModel to return description
        * src/gpodder/gpodder.py: Added description to "available 
          episodes" list; made columns resizable and reorderable and 
          added "ellipsize" property to both name and description field
	* bin/gpodder: bumped release date again (wonder if we should 
	  use svn:keywords on that file some time soon ;)

Mon, 20 Nov 2006 11:58:37 +0100 <thp@perli.net>
        * src/gpodder/libipodsync.py: Applied patch from Nick (nikosapi 
          gmail com) to add file size to iTunesDB. This should fix the 
          constant disk spinning on 5G iPods. Thanks :)
