@@ -70,6 +70,7 @@
      * python-pymad (preferred; MAD MP3 decoder Python bindings)
      * python-eyed3 (alternative to pymad; eyeD3 Python bindings)
    * python-gpod (libgpod's Python bindings)
+   * python-id3 (OPTIONAL; if you want ID3v2 cover art extraction)
 
  Other users: Please install the above packages somehow ;)
  If you want to install gPodder from source, you have to 
